# herold

./: .gitignore  Makefile  README.md  pyproject.toml
herold/: __init__.py  changelog.py  check.py  command_line.py  config.py  find.py  init.py  install.py  meta_data.py  patch_commit_message.py  releases.py  version.py
herold/default_config/: changelog  config.yml  meta-data.yml
herold/hooks/: prepare-commit-msg
herold/utils/: _subprocess.py  file_system.py  git.py  templating.py
