[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
version = "0.0.0"
name = "herold"

requires-python = ">=3.8"

dependencies = [
  "pyyaml",
  "jinja2",
  "simple-logging-setup",
]


[project.optional-dependencies]
dev = [
  "build",
  "twine",
  "tox",
  "rlpython",
]

test = [
  "coverage==7.4.4",
  "pytest==8.1.1",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["herold*"]
